<resources>
    <string name="app_name" translatable="false">MiamList</string>
    <string name="app_slogan">Vos courses, tout simplement</string>
    <string name="login">Connexion</string>
    <string name="log_in">Se connecter</string>
    <string name="password">Mot de passe</string>
    <string name="email">E-mail</string>
    <string name="great_to_see_you_again">Ravi de vous revoir</string>
    <string name="new_list">Nouvelle liste</string>
    <string name="new_recipe">Nouvelle recette</string>
    <string name="no_list_yet">Pas encore de liste</string>
    <string name="my_lists">Listes</string>
    <string name="my_recipes">Recettes</string>
    <string name="give_your_list_a_name">Donnez un nom à votre liste</string>
    <string name="give_your_recipe_a_name">Donnez un nom et une description à votre recette</string>
    <string name="example_shopping">Exemple: Repas crêpes</string>
    <string name="example_description_recipe">Exemple: La superbe recette de grand-mère</string>
    <string name="cancel">Annuler</string>
    <string name="create_the_list">Créer la liste</string>
    <string name="create_the_recipe">Créer la recette</string>
    <string name="delete">Supprimer</string>
    <string name="press_to_open">Appuyez pour ouvrir</string>
</resources>